Add SteamInputDBInfo enhancements to API (get)
